--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,15 @@
   </head>
   <body>
     <div class="container">
-        <%= render :partial => 'layouts/header' %>
-        <section>
-          <%= yield %>
-        </section>    
-        <%= render :partial => 'layouts/footer' %>
-        <%= debug(params) if Rails.env.development? %>
+      <%= render 'layouts/header' %>
+      <section class="round">
+        <% flash.each do |key, value| %>
+          <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
+        <%= yield %>
+      </section>
+      <%= render :partial => 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>     
     </div>
   </body>
 </html>                                               
