--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     </td>
     <td class="sidebar round">
       <strong>Name</strong> <%= @user.name %><br />
-      <strong>URL</strong>  <%= link_to users_path(@user), @user %>
+      <strong>URL</strong>  <%= link_to user_path(@user), @user %>
     </td>
   </tr>
 </table>
